tests/baselines/reference/unusedClassesinNamespace1.errors.txt
unusedClassesinNamespace1.ts(2,11): error TS6196: 'c1' is declared but never used.


==== unusedClassesinNamespace1.ts (1 errors) ====
    namespace Validation {
        class c1 {
              ~~
!!! error TS6196: 'c1' is declared but never used.
    
        }
    }